--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,9 +1,9 @@
-body,
+/* body,
 #root {
   width: 100%;
   max-width: 100vw;
   overflow-x: hidden;
-}
+} */
 
 * {
   font-family: "Noto Sans KR", sans-serif;
